[package]
name = "gemau"
version = "0.1.0"
authors = ["Alfie Davies <research@alfied.xyz>"]
edition = "2021"
rust-version = "1.75.0"
description = "The beginnings of a computer algebra system for Combinatorial Game Theory."
readme = "README.md"
repository = "https://github/alfiemd/gemau"
license = "Unlicense"
keywords = ["cgt", "algebra", "mathematics"]
categories = ["mathematics"]
resolver = "2"

[dependencies]
poset = { version = "0.1.0", optional = true }
graff = { version = "0.1.0", optional = true }
itertools = "0.13.0"
serde = { version = "1.0.210", optional = true }

[features]
serde = ["serde/derive", "graff?/serde", "poset?/serde"]
graff = ["dep:graff", "poset?/graff"]
poset = ["dep:poset"]
